# tp_analyzer_firmware

./: CMakeLists.txt  lv_conf.h
app/: CMakeLists.txt  app.c  app.h
app/lvgl/: screen_manager.c  screen_update.c  screens.h
app/lvgl/screens/: scr_boot.c  scr_home.c  scr_plot.c  scr_plotter.c  scr_plotter.h
app/lvgl/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
app/lvgl/ui/components/: ui_comp_hook.c
app/lvgl/ui/images/: ui_img_icons_icon_back_png.c
app/lvgl/ui/screens/: ui_boot.c  ui_boot.h  ui_plotter.c  ui_plotter.h  ui_scrBoot.c  ui_scrBoot.h  ui_scrPlotter.c  ui_scrPlotter.h
app/tasks/: ad_task.c  ad_task.h  ui_task.c
app/ui/: screen_manager.c  screen_manager.h  screen_update.c  screen_update.h  screens.h
app/ui/helpers/: chart.c  chart.h
app/ui/screens/: scr_boot.c  scr_boot.h  scr_home.c  scr_home.h  scr_plot.c  scr_plot.h
bsp/: CMakeLists.txt
bsp/rp2350/: board_config.h
drivers/: CMakeLists.txt
drivers/display/: ili9486.c  ili9486.h
firmware/app/lvgl/: screen_manager.c  screens.h
firmware/app/lvgl/helpers/: chart.c
firmware/app/lvgl/screens/: scr_boot.c  scr_boot.h  scr_home.c  scr_plotter.c  scr_plotter.h
firmware/app/lvgl/ui/: ui.c  ui.h
firmware/app/lvgl/ui/screens/: ui_scrPlotter.c  ui_scrPlotter.h
firmware/app/tasks/: ui_task.c
firmware/bsp/rp2350/: board_config.h
firmware/drivers/display/: ili9486.c  ili9486.h
firmware/drivers/encoder/: encoder.c  encoder.h
firmware/services/lvgl/: lvgl_port.c  lvgl_port.h
hal/: CMakeLists.txt  hal_adc.c  hal_adc.h  hal_display.h  hal_gpio.c  hal_gpio.h
rtos/: FreeRTOSConfigApp.h  hooks.c  static.c
rtos/freertos/: CMakeLists.txt
services/: CMakeLists.txt
services/lvgl/: lvgl_port.c  lvgl_port.h
ui/: .gitignore  ui.sll  ui.spj
ui/assets/fonts/: ui_font_poppinsBold10.c  ui_font_poppinsBold10.fcfg  ui_font_poppinsReg10.c  ui_font_poppinsReg10.fcfg  ui_font_poppinsReg8.c  ui_font_poppinsReg8.fcfg
